--- a/app/src/main/res/values/metrolist_strings.xml
+++ b/app/src/main/res/values/metrolist_strings.xml
@@ -130,6 +130,7 @@
 
     <string name="auto_download_on_like">Auto download on like</string>
     <string name="auto_download_on_like_desc">Automatically download songs when you like them</string>
+    <string name="wifi_only">Wifi only</string>
 
     <string name="clear_song_cache_dialog">  Are you sure you want to clear all cached songs?</string>
 
